Details & Edit Product

--- a/Warehouse/src/main/resources/application.properties
+++ b/Warehouse/src/main/resources/application.properties
@@ -7,3 +7,6 @@ logging.level.root=WARN
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
+upload.path=./src/main/resources/static/images
+
+
