--- a/Warehouse/src/main/resources/application.properties
+++ b/Warehouse/src/main/resources/application.properties
@@ -4,9 +4,8 @@ spring.datasource.username=root
 spring.datasource.password=
 logging.level.root=WARN
 
+spring.jpa.open-in-view=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 upload.path=./src/main/resources/static/images
-
-
